# lsimons-template-mono

./: .gitignore  .golangci.yml  .mise.toml  AGENTS.md  Cargo.toml  Makefile  README.md  biome.json  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/spec/: 000-shared-patterns.md  002-mise-adoption.md  002-toolchain.md
