# Root pyproject.toml acts as the uv workspace root + shared dev-tool config.
# Each member package under packages/*-py has its own pyproject.toml for
# build metadata (name, version, dependencies). Shared tools (ruff,
# basedpyright, pytest) are configured here so every member inherits.

[project]
name = "lsimons-template-workspace"
version = "0.0.0"
description = "Workspace root for lsimons-template"
requires-python = ">=3.14"
# Root package has no runtime deps; members declare their own.

[tool.uv.workspace]
members = ["packages/*-py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "basedpyright>=1.39.3",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["packages/*-ts", "packages/*-go", "packages/*-rs"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["lsimons_template"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["packages/*-py/src", "packages/*-py/tests"]

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-v"
python_files = ["test_*.py", "*_test.py"]

[tool.uv]
exclude-newer = "1 week"
